# octane

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  \
assets/: default.frag.spirv  default.fs.spirv  default.vert.spirv  default.vs.spirv  fullscreen.vert.spirv  jfa.comp.spirv  jfa.cs.spirv  postfx.frag.spirv  present.frag.spirv  present.fs.spirv  present.vert.spirv  seed.cs.spirv  voxel.frag.spirv  voxel.vert.spirv
crates/app/: Cargo.toml  build.rs
crates/app/src/: main.rs  window.rs
crates/client/: Cargo.toml  build.rs
crates/client/src/: main.rs  window.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  mesh.rs  octree.rs  render.rs  render3.rs
crates/libs/gpu/: Cargo.toml
crates/libs/gpu/src/: access.rs  context.rs  device.rs  error.rs  framebuffer.rs  image.rs  memory.rs  pipeline.rs  shader.rs  swapchain.rs
crates/libs/vk/: build.rs
crates/libs/vk/src/: lib.rs
crates/libs/window/: Cargo.toml
crates/libs/window/src/: lib.rs  linux.rs  windows.rs
crates/libs/windows/: Cargo.toml
crates/libs/windows/src/: ffi.rs  (+1 more)
libs/gpu/src/: buffer.rs  context.rs  device.rs  format.rs  framebuffer.rs  image.rs  lib.rs  pipeline.rs  render_pass.rs  shader.rs  surface.rs  swapchain.rs
libs/math/src/: lib.rs  matrix.rs  vector.rs
libs/vk/: Cargo.toml
libs/vk/src/: lib.rs
libs/x11/: Cargo.toml
libs/x11/src/: lib.rs
resources/: default.frag.glsl  default.fs  default.vert.glsl  default.vs  fullscreen.vert.glsl  jfa.comp.glsl  jfa.cs  postfx.frag.glsl  present.frag.glsl  present.fs  present.vs  seed.cs  voxel.frag.glsl  voxel.vert.glsl
(+1 files in other folders)
