[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 	= { path = "../../libs/x11" }
vk 	= { path = "../../libs/vk" }

log = "*"
raw-window-handle = "*"

[build-dependencies]
glsl-to-spirv = "*"
