[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common 	= { path = "../../crates/common" }

math 	= { path = "../../libs/math" }
x11 	= { path = "../../libs/x11" }
vk 	= { path = "../../libs/vk" }
net 	= { path = "../../libs/net" }

log = "*"
raw-window-handle = "*"

[build-dependencies]
glsl-to-spirv = "*"
